# empiresgpu

./: .gitignore  Cargo.toml  SCALING.md
reference/: main.rs
shaders/: boat_render.wgsl  empire_compute.wgsl  empire_render.wgsl  empire_render_action.wgsl  empire_render_age.wgsl  empire_render_boat_need.wgsl  empire_render_diplomacy.wgsl  empire_render_need.wgsl  empire_render_strength.wgsl  terrain_render.wgsl
src/: main.rs
src/camera/: mod.rs
src/graphics/: mod.rs
src/simulation/: diplomacy.rs  mod.rs
src/ui/: mod.rs
