[package]
name = "empiresgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
# Phase 4: Add texture rendering - Latest APIs
winit = "0.30"
wgpu = "26.0"
pollster = "0.4"  # For blocking on async GPU operations
bytemuck = { version = "1.23", features = ["derive"] }  # For vertex buffer casting
wgpu_text = "26.0.0"
ab_glyph = "0.2.31"
glyph_brush = "0.7.12"
noise = "0.9"  # For terrain generation with simplex noise
